--- a/HW2/templates/duck.html
+++ b/HW2/templates/duck.html
@@ -53,10 +53,9 @@
 <body>
     <h1>Bad day? Here's the duck for you!</h1>
     <h3>Random duck №{{ image_num }} </h3>
-    <!-- <img id="duckImage" src="https://random-d.uk/api/randomimg" alt="Random Duck"> -->
     <img id="duckImage" src="{{ image_url }}" alt="Random Duck">
     <div class = "buttons-container"> 
-        <a class="button" href="/duck">Новая утка</a>
+        <a class="button" href="/duck">New Duck</a>
         <a href="/" class="button">Back to Main</a>
     </div>
     
