--- a/HW2/templates/index.html
+++ b/HW2/templates/index.html
@@ -93,7 +93,7 @@
     <div class="nav-button">
         <h3 class="section-divider">For Daily Mood</h3>
         <a class="nav-link" href="duck/">Random Duck</a>
-        <a class="nav-link" href="/fox/">Random Fox</a>
+        <a class="nav-link" href="/fox/1">Random Fox</a>
         <h3 class= "section-divider">For Weather</h3>
         <a class="nav-link" href="sheet3/">Weather in Minsk</a>
         <a class="nav-link" href="sheet3/">Weather at place</a>
