--- a/HW2/templates/index.html
+++ b/HW2/templates/index.html
@@ -95,12 +95,11 @@
         <a class="nav-link" href="duck/">Random Duck</a>
         <a class="nav-link" href="/fox/1">Random Fox</a>
         <h3 class= "section-divider">For Weather</h3>
-        <a class="nav-link" href="sheet3/">Weather in Minsk</a>
-        <a class="nav-link" href="sheet3/">Weather at place</a>
+        <a class="nav-link" href="weather-minsk/">Weather in Minsk</a>
+        <a class="nav-link" href="weather/city/">Weather at place</a>
         <h3 class = "section-divider">For Your Motivation</h3>
         <a class="nav-link" href="sheet3/">Daily motivation</a>
     </div>
     
-    <img src="https://randomfox.ca/images/113.jpg" alt="Лиса">
 </body>
 </html>
