--- a/HW2/templates/duck.html
+++ b/HW2/templates/duck.html
@@ -24,10 +24,11 @@
             gap: 15px;
             margin-bottom: 5px;
         }
+        
         .button {
             display: inline-block;
             padding: 12px 25px;
-            border: 2px solid #ffffff;
+            border: 2px solid white;
             border-radius: 10px;
             background-color: rgba(255, 255, 255, 0.2);
             color: white;
