--- a/HW2/templates/index.html
+++ b/HW2/templates/index.html
@@ -1,44 +1,28 @@
+{% extends "base.html" %}
+
+{% block title %}Main page{% endblock %}
+
+{% block content %}
+    <div class="nav-button">
+        <h3 class="section-divider">For Daily Mood</h3>
+        <a class="nav-link" href="duck/">Random Duck</a>
+        <a class="nav-link" href="/fox/1/">Random Fox</a>
+        <h3 class= "section-divider">For Weather</h3>
+        <a class="nav-link" href="weather-minsk/">Weather in Minsk</a>
+        <a class="nav-link" href="weather/city/">Weather at place</a>
+        <h3 class = "section-divider">For Your Motivation</h3>
+        <a class="nav-link" href="sheet3/">Daily motivation</a>
+    </div>
+{% endblock %}
+
+
+
 <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        /* # CSS */
-        body{
-            background-color: rgba(106, 56, 124, 0.822);
-            /* background-image: url(); */            
-        }
-
-        a{
-            
-            padding: 10px;
-            border: 1px solid black;
-            margin: 50px;
-        }
-    </style>
-</head>
-<body>
-    <p>
-    <a href="sheet1/">страница1</a>
-    <a href="/sheet2/">страница2</a>
-    <a href="sheet3/">страница3</a>
-    </p>
-    <br>
-    <img src="https:\/\/randomfox.ca\/images\/113.jpg" alt="123">
-    
-</body>
-</html> -->
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+    <title>Weather and cute stuff</title>
     <style>
         body {
             background-color: rgba(46, 45, 47, 0.822);
@@ -73,12 +57,6 @@
             transform: scale(1.05);
         }
 
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
         .section-divider {
             color: white;
             text-align: left;
@@ -102,4 +80,4 @@
     </div>
     
 </body>
-</html>
+</html> -->
