--- a/HW2/templates/weather.html
+++ b/HW2/templates/weather.html
@@ -1,100 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather in {{weather.city}}</title>
-    <style>
-        body {
-            background-color: rgba(46, 45, 47, 0.822);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-            font-family: Arial, sans-serif;
-            align-items: center;
-            padding: 20px;
-        }
-        p {
-            text-align: center;
-            margin: 10px 0;
-        }
+{% extends "base.html" %}
 
-        .view-container {
-            border: 2px solid rgba(255, 255, 255, 0.2);
-            border-radius: 10px;
-            padding: 10px;
-            background: rgba(255, 255, 255, 0.1);
-            margin-bottom: 20px;
-            width: 50%;
-            align-content: center;
-            max-width: 600px;
-            min-width: 300px;   
-        }
+{% block title %}Weather in {{ weather.city }}{% endblock %}
 
-        .weather-container {
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
-            border-radius: 15px;
-            padding: 25px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .temperature {
-            text-align: center;
-            font-size: 3em;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-
-        .details {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            margin-top: 20px;
-        }
-
-        .detail-item {
-            background: rgba(255, 255, 255, 0.566);
-            padding: 10px;
-            border-radius: 8px;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 12px 25px;
-            border: 2px solid white;
-            border-radius: 10px;
-            background-color: rgba(255, 255, 255, 0.2);
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            width: 120px;
-        }
-
-    </style>
-</head>
-<body>
-    <div class="view-container">
+{% block content %}
+    <div class="weather-view-container">
         <div class="weather-container">
-            {% if request.path == '/weather/' or request.path == '/weather/city/' %}
+            {% if request.path == '/weather/' or weather.city == 'City'%}
                 <h1>⬆️ Enter name of the city in address</h1>
+            {% elif not weather.city %}
+                <h1> ⬆️City not found.</h1>
+                <h1> Enter name of the city in address</h1>
             {% else %}
                 <h1>{{ weather.city }}</h1>
             {% endif %}
         </div>
     
-        <div class="temperature">{{ weather.temp }}°C</div>
+        <div class="weather-temperature">{{ weather.temp }}°C</div>
             <p>Feels like {{ weather.feels_like }}°C</p>
             <p>{{ weather.description }}</p>
-            <div class="details">
-                <div class="detail-item">
+            <div class="weather-details">
+                <div class="weather-detail-item">
                     <p> Humidity</p>
                     <p>{{ weather.humidity }}%</p>
                 </div>
-                <div class="detail-item">
+                <div class="weather-detail-item">
                     <p> Wind</p>
                     <p>{{ weather.wind }} m/s</p>
                 </div>
@@ -106,5 +35,4 @@
     
 
     <a href="/" class="button"> Main page</a>
-</body>
-</html>
+{% endblock %}
