--- a/HW4_5/templates/task2.html
+++ b/HW4_5/templates/task2.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="poem-h1">Евгений Евтушенко</h1>
+    <span class="poem-h">Евгений Евтушенко</span>
     <div class="poem-text">
                     — 1955 —
                     
@@ -12,8 +12,11 @@
 
         Потом под пихтою приляжет
         на куртку рыжую мою
-        и мне, задумчивая, скажет:
-        «А ну-ка, спой!..» — и я пою.
+        и мне, 
+                задумчивая, 
+                                    скажет:
+        «А ну-ка, спой!..» 
+                                    — и я пою.
     </div>
 
 {% endblock %}
