--- a/HW2_3/static/css/style.css
+++ b/HW2_3/static/css/style.css
@@ -7,6 +7,21 @@ body {
     padding: 20px;
 }
 
+nav {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.2rem;
+}
+
+nav span {
+    color: white;
+    font-weight: bold;
+}
+
 .auth-container {
     max-width: 500px;
     margin: 2rem auto;
@@ -70,11 +85,11 @@ body {
 }
 
 .login-container {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    max-width: 500px;
+    margin: 2rem auto;
+    padding: 2rem;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
