--- a/HW4_5/templates/menu.html
+++ b/HW4_5/templates/menu.html
@@ -1,10 +1,12 @@
-<a href="/task1/">Задание 1</a>
-<a href="/task2/">Задание 2</a>
-<a href="/task3/">Задание 3</a>
-<a href="/task4/">Задание 4</a>
-<a href="/task5/">Задание 5</a>
-<a href="/task6/">Задание 6</a>
-<a href="/task7/">Задание 7</a>
-<a href="/task8/">Задание 8</a>
-<a href="/task9/">Задание 9</a>
-<a href="/task10/">Задание 10</a>
+<a href="{{ url_for('show_task', task_number=1) }}">Задание 1</a>
+<a href="{{ url_for('show_task', task_number=2) }}">Задание 2</a>
+<a href="{{ url_for('show_task', task_number=3) }}">Задание 3</a>
+<a href="{{ url_for('show_task', task_number=4) }}">Задание 4</a>
+<a href="{{ url_for('show_task', task_number=5) }}">Задание 5</a>
+<a href="{{ url_for('show_task', task_number=6) }}">Задание 6</a>
+<a href="{{ url_for('show_task', task_number=7) }}">Задание 7</a>
+<a href="{{ url_for('show_task', task_number=8) }}">Задание 8</a>
+<a href="{{ url_for('show_task', task_number=9) }}">Задание 9</a>
+<a href="{{ url_for('show_task', task_number=10) }}">Задание 10</a>
+<a href="{{ url_for('show_task', task_number=11) }}">Задание 11</a>
+<a href="{{ url_for('show_task', task_number=12) }}">Задание 12</a>
